# ezz

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: build-release.yml  ci.yml  release.yml
assets/: 7zz  hdpi.manifest.xml  help.txt  用 aletheia 还原.json  用 ezz 提取.json
assets/icon/: ezz.icns
docs/: v3-design.md
src/: application.rs  cli.rs  error.rs  lib.rs  main.rs  notify.rs  password_store.rs  seven_zip.rs  types.rs  workflow.rs
src/decompress/: cleanup.rs  mod.rs  password.rs  pwdb.rs  sevenz.rs  sevenzip.rs  utils.rs
src/decompress/arch/: linux.rs  windows.rs
src/extractor/: archive.rs  cleanup.rs  mod.rs  reveal.rs  sevenzz.rs  vault.rs  wordlist.rs
src/extractor/platform/linux/: exe.rs
src/extractor/platform/windows/: dialog.rs  exe.rs  explorer.rs  mod.rs
src/platform/: common.rs  macos.rs  mod.rs  windows.rs
src/unpack/: archive.rs  cleanup.rs  mod.rs  password.rs  sevenz.rs  sevenzip.rs  sevenzz.rs  vault.rs
src/unpack/arch/: linux.rs
src/unpack/arch/windows/: exe.rs  mod.rs
src/unpack/platform/linux/: exe.rs  explorer.rs  mod.rs
tests/: application_contract.rs  workflow_contract.rs
tests/fixtures/: README.md  libarchive-LICENSE.txt  zip-multivolume.z01
xtask/: Cargo.toml
xtask/src/: main.rs
