[workspace]
members = ["xtask"]
default-members = ["."]
resolver = "3"

[package]
name = "ezz"
version = "3.0.0"
edition = "2024"

[[bin]]
name = "ezz"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
trash = "5.2"

[profile.release]
lto = "fat"
panic = "abort"
codegen-units = 1
