[workspace]
members = ["xtask"]
default-members = ["."]
resolver = "3"

[package]
name = "ezz"
version = "3.0.0"
edition = "2024"

[[bin]]
name = "ezz"
path = "src/main.rs"

[dependencies]
log = "0.4"
notify-rust = "4.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simplelog = "0.12"
tempfile = "3"
thiserror = "2"
trash = "5.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = "0.3.2"
objc2-foundation = "0.3.2"

[target.'cfg(target_os = "windows")'.dependencies]
interprocess = "2.4.2"
native-windows-derive = "1.0.5"
native-windows-gui = { version = "1.0.13", default-features = false, features = ["file-dialog", "high-dpi"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
lto = "fat"
panic = "abort"
codegen-units = 1
