[package]
name = "xtask"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
sha2 = "0.10"
tar = "0.4"
xz2 = "0.1"
zip = { version = "6", default-features = false, features = ["deflate"] }
